--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -29,5 +29,12 @@
       class: "button is-primary is-large
               is-align-self-flex-end mb-3 mt-3" %>
     <% end %>
+
+    <% if turbo_native_app? %>
+      <% tag.p class: 'has-text-centered' do %>
+          <%= t('.login_message') %>
+          <%= link_to t('.log_in'), login_path %>
+      <% end %>
+    <% end %>
   </layout-column>
 </layout-columns>
