--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -56,3 +56,18 @@
     </layout-column>
   </layout-columns>
 <% end %>
+
+<% if turbo_native_app? %>
+  <ol data-controller="bridge--nav-menu">
+    <li>
+      <%= button_to(
+            t("application.navbar.logout"),
+            logout_path,
+            method: :delete,
+            data: {
+              bridge__nav_menu_target: "item"
+            }
+          ) %>
+    </li>
+  </ol>
+<% end %>
