--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -8,6 +8,7 @@
       <h1 class="title is-inline"><%= @listing.title %></h1>
       <%= link_to t('.edit'), edit_listing_path(@listing)%>
     </div>
+    <%= render "tags", listing: @listing %>
     <layout-columns class="columns is-centered">
       <layout-column class="box column is-half mt-6 p-5 m-4">
         <dl>
