Set up the feed and My Ads

--- a/app/views/listings/_tags.html.erb
+++ b/app/views/listings/_tags.html.erb
@@ -2,6 +2,6 @@
 
 <%= tag.layout_container class: "field is-grouped is-grouped-multiline" do %>
   <% listing.tags.each do |value| %> 
-    <%= render "tag", value: %> 
+    <%= render "listings/tag", value: %> 
   <% end %>
 <% end %>
