--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -1,2 +1,20 @@
-<h1>Feed#show</h1>
-<p>Find me in app/views/feed/show.html.erb</p>
+<%= content_for :title do %> 
+  <%= t('.title') %> 
+<% end %> 
+
+<div class="container mt-3">
+  <h1 class="title">
+    <% if logged_in? %>
+      <%= t('.welcome_with_name', name: Current.user.name) %>
+    <% else %> 
+      <%= t('.welcome') %>
+    <% end %>
+  </h1>
+  <layout-columns class="columns is-centered is-multiline">
+    <%= render partial: @listings, layout: 'listing_layout' %>
+  </layout-columns>
+</div>
+
+<div class="div m-5 mt-6">
+  <%== pagy_bulma_nav(@pagy) %>
+</div>
