--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -15,6 +15,8 @@
   </layout-columns>
 </div>
 
+<% if show_paginator? %>
 <div class="div m-5 mt-6">
   <%== pagy_bulma_nav(@pagy) %>
 </div>
+<% end %>
