--- a/app/views/listings/_listing.html.erb
+++ b/app/views/listings/_listing.html.erb
@@ -1,6 +1,13 @@
 <%# locals: (listing:) -%>
 
 <div class="card">
+  <div class="card-image">
+    <%= link_to listing_path(listing) do %>
+      <figure class="image is-4by3">
+        <%= image_tag listing.cover_photo.variant(resize_to_fit: [500, 500]) %>
+      </figure>
+    <% end %>
+  </div>
   <div class="card-content is-block">
     <article class="content">
       <%= link_to listing_path(listing) do  %>
