--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -12,6 +12,13 @@
     <% end %>
 
     <%= render "tags", listing: @listing %>
+    <div class="has-text-centered">
+      <%= link_to url_for(@listing.cover_photo) do %>
+        <figure class="image is-inline-block">
+          <%= image_tag @listing.cover_photo.variant(resize_to_limit: [800, 800]) %>
+        </figure>
+      <% end %>
+    </div>
     <layout-columns class="columns is-centered">
       <layout-column class="box column is-half mt-6 p-5 m-4">
         <dl>
@@ -31,6 +38,7 @@
       </layout-column>
       <layout-column class="box column is-half mt-6 p-5 m-4">
         <dl>
+          <dt>Image</dt>
           <dt class="has-text-grey"><%= @listing.class.human_attribute_name(:price)%></dt>
           <dd class="has-text-weight-semibold is-size-5"><%= @listing.price %>€</dd>
           <br>
